[gd_scene load_steps=2 format=3 uid="uid://bj8rc2xwmfl3m"]

[ext_resource type="Script" uid="uid://d3jxq6vwqfgy" path="res://scripts/ui/capture_ui.gd" id="1"]

[node name="CaptureUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.85)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 150.0
offset_top = 50.0
offset_right = 650.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "✨ VICTORY! ✨"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 100.0
offset_top = 110.0
offset_right = 700.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 16
text = "Choose a spirit to purify and capture:"
horizontal_alignment = 1

[node name="SpiritsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 100.0
offset_top = 160.0
offset_right = 700.0
offset_bottom = 400.0
theme_override_constants/separation = 20
alignment = 1

[node name="SkipButton" type="Button" parent="."]
layout_mode = 1
offset_left = 300.0
offset_top = 420.0
offset_right = 500.0
offset_bottom = 460.0
text = "Skip Capture"
